--- a/dashboard/assets/application.css
+++ b/dashboard/assets/application.css
@@ -67,6 +67,20 @@ div.smallPrint {
 
 /* LSJ specific */
 
+#selectedUrnDiv {
+	display:  none;
+}
+
+#copyUrn {
+	font-size: 60%;
+	display: inline-block;
+	position:  relative;
+	top:  0.3em;
+	width: 1em;
+	margin-left: 0.3em;
+	margin-right: 0.3em;
+}
+
 div#menu p {
 	font-size: 80%;	
 	margin: 0;
@@ -167,7 +181,7 @@ div#lexiconDiv div {
 	margin-top: 0;
 }
 
-div.lexEntryDiv {
+div#lexEntryDiv {
 	border: 1px solid rgb(226, 226, 226);
 	border-radius: 8px;
 	padding: 0.5em 1em 0.5em 1em;
@@ -256,7 +270,7 @@ span.lexEntryUrn:active {
 	color: rgb(255, 240, 194);
 }
 
-p.lexEntry {
+div.lexEntry {
 	line-height: 1.2em;
 }
 
@@ -328,30 +342,13 @@ ul#resultsList {
 	color: navy;
 	margin-left: 0;
 	padding-left: 0;
-	margin-top:	7em;
+	/*margin-top:	7em;*/
 	max-height: 8em;
+	min-height:  2em;
 	overflow: scroll;
 	cursor: pointer;
-	background:
-		/* Shadow covers */
-		linear-gradient(white 30%, rgba(255,255,255,0)),
-		linear-gradient(rgba(255,255,255,0), white 70%) 0 100%,
-		
-		/* Shadows */
-		radial-gradient(50% 0, farthest-side, rgba(0,0,0,.2), rgba(0,0,0,0)),
-		radial-gradient(50% 100%,farthest-side, rgba(0,0,0,.2), rgba(0,0,0,0)) 0 100%;
-	background:
-		/* Shadow covers */
-		linear-gradient(white 30%, rgba(255,255,255,0)),
-		linear-gradient(rgba(255,255,255,0), white 70%) 0 100%,
-		
-		/* Shadows */
-		radial-gradient(farthest-side at 50% 0, rgba(0,0,0,.2), rgba(0,0,0,0)),
-		radial-gradient(farthest-side at 50% 100%, rgba(0,0,0,.2), rgba(0,0,0,0)) 0 100%;
-	background-repeat: no-repeat;
 	background-color: rgb(244, 244, 244);
 	border: 1px solid rgb(237, 237, 237);
-	background-size: 100% 40px, 100% 40px, 100% 14px, 100% 14px;
 	
 	/* Opera doesn't support this in the shorthand */
 	background-attachment: local, local, scroll, scroll;
