--- a/dashboard/assets/application.css
+++ b/dashboard/assets/application.css
@@ -52,12 +52,16 @@ footer > p > a:hover {
 	border-bottom: 1px solid rgba(255,255,255,0.5);
 }
 
-div.small_print {
+div.smallPrint {
 	font-family: Helvetica, sans;
 	font-weight: 300;
-	font-size: 80%;
+	font-size: 100%;
 	line-height: 1.3;
-	color: 582c83;
+	color: #444;
+}
+
+div.smallPrint div p a {
+	font-weight: 500;
 }
 
 div.smallPrint {
@@ -168,6 +172,10 @@ label {
 	color: #666;
 }
 
+div#lookupStuff {
+	margin-bottom:  1em;
+}
+
 div#lexiconDiv {
 	float:left;
 	max-width: 70%;
@@ -244,7 +252,7 @@ span.lexEntryUrn, span.lexEntryLink {
 }
 
 span.lexEntryUrn:hover:before {
-	content: "Click to copy ➙ ";
+	content: "Click icon to copy URN ➙ ";
 	color: white;
 }
 
