--- a/dashboard/assets/application.css
+++ b/dashboard/assets/application.css
@@ -374,7 +374,7 @@ ul#resultsList, div#resultsList {
 	/*margin-top:	7em;*/
 	max-height: 8em;
 	padding-right:  3em;
-	margin-bottom:  5px;
+	margin-bottom:  1.5em;
 	min-height:  2em;
 	overflow: scroll;
 	cursor: pointer;
